# opdapt

./: .gitignore  README.md  app.py  config.py  pyproject.toml  simulate_opd_day.py
api/: appointment.py  auth.py  doctor.py  opd.py  patient.py  router.py
core/: jwt.py  security.py
dependencies/: auth.py
docs/: API_DESIGN.md  TOKEN_ALLOCATION_ALGORITHM.md
models/: __init__.py  appointment.py  base.py  users.py
